some changes on the welcome website
Former-commit-id: bea89bbe48e64de0251355f7e9b40f1b93186136 [formerly 8fe5d9586d3e5efd9c532d4c9c73eb9d3a435e57] [formerly bbb9799aa23a6cc31306251f459890a2f55d64ff [formerly a2ab2d4b57d6822ee441ecfc06f6cafccda2cad8]]
Former-commit-id: 20c004e3dfef06432a93c9bb2db7ff84d0702d5e [formerly 408842b504e78c2b923bcc44685be62b89c4e00a]
Former-commit-id: 4b25f6ac146b90b07b1983b6f967c756b077c5e9

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -83,7 +83,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading">
             Discover new customers, Get organized and Grow your Business
-          </h1><a class="maia-button button-download mobile-is-hidden get-started try-iogrow" href="/new-sign-in/">Try ioGrow</a>
+          </h1><a class="maia-button button-download mobile-is-hidden get-started try-iogrow" href="/sign-in">Try ioGrow</a>
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile get-started try-iogrow" href="/sign-in" style="display: inline-block;">
             Try ioGrow</a>
@@ -117,7 +117,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="../drive/images/home/photo-1.jpg" style="transform: matrix(1, 0, 0, 1, 0, -254.921875); background-image: url(https://www.google.com/drive/images/home/photo-1-1600.jpg);"></div>
+        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="http://storage.googleapis.com/iogrow-gs/discovery.jpg" style="transform: matrix(1, 0, 0, 1, 0, -254.921875); background-image: url(http://storage.googleapis.com/iogrow-gs/discovery.jpg);"></div>
       </div>
       <section class="section-filesanywhere js-hinted-fullscreen" style="height: 407px;">
         <div class="content">
@@ -146,24 +146,25 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 Built on top of Google for Work
               </h2>
               <p class="section-body">
-                "Work is more than calculating profits, balancing supply & demand or pushing paper. Work is people coming together to dream, create, hack, hustle and make. People should connect easily to share ideas, develop them together, and get things done from anywhere.Technology should make work easier and faster, not harder. It should get out of the way so our ideas have space to grow and inspiration is free to strike at any moment. When we use the tools that make our lives easier, we can do our best work."
+                "Work is more than calculating profits, balancing supply & demand or pushing paper. Work is people coming together to dream, create, hack, hustle and make. People should connect easily to share ideas, develop them together, and get things done from anywhere.Technology should make work easier and faster, not harder. It should get out of the way so our ideas have space to grow and inspiration is free to strike at any moment. When we use the tools that make our lives easier, we can do our best work." Dr.Eric Schmidt
               </p>
             </div>
           </div>
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="../drive/images/home/photo-2.jpg" style="transform: matrix(1, 0, 0, 1, 0, -463.9375); background-image: url(https://www.google.com/drive/images/home/photo-2-1600.jpg);"></div>
+        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="http://storage.googleapis.com/iogrow-gs/team.jpg" style="transform: matrix(1, 0, 0, 1, 0, -463.9375); background-image: url(http://storage.googleapis.com/iogrow-gs/team.jpg);"></div>
       </div>
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
-          <div class="one-whole" id="pricing">
+          <div class="one-whole" id="pricing" style="text-align:left;">
 
-            <h1 class="section-headline section-headline-large section-headline-gray heading-headline">
+          <h1 class="section-headline section-headline-large section-headline-gray heading-headline">
               $30 per user per month <br>
               Get started with ioGrow <br> it’s free for 30 days <br>
 
             </h1>
+          
             <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
             Start your free trial</a>
           </div>
