--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -228,7 +228,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     <section class="section-intro" style="height: 560px; opacity: 1;">
       <div class="content" style="margin-left: 309.5px !important;">
         <div class="column column-left with-example">
-          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.png">
+          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.jpg">
         </div>
         <div class="column column-right with-copy">
           <div class="copy text-left">
