fixing bug ctrl key not working on mac and fixing loader not working on accountcontroller
Former-commit-id: f1578888e4dee45bf99eee934050f598476487f1 [formerly 9076deedd274b02451bf0228433d06c78b00a81b] [formerly 8c9823b40ec49e2c754af56f8f7740fa868c0649 [formerly 4f1a8b15ae25620d585f1964b40cd318e3af50f1]]
Former-commit-id: 162fda0d92515727fdf14e040f02abeda4c06d6e [formerly 5aad77d09b5e0381a8228d0e7ee32f93af56904d]
Former-commit-id: b1376f82db1466cb264b977b75c1ae6c98f94a29

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -234,7 +234,7 @@
       <div class="tab-pane">
       <div class="row">
         <div class="col-md-12" ng-show="show=='list'">
-            <div class="table-responsive showPage">
+            <div class="table-responsive showPage" ng-show="accounts">
                 <table class="table">
                 <thead>
                     <tr>
