--- a/templates/base.html
+++ b/templates/base.html
@@ -475,9 +475,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   <script type="text/javascript">
 
 
-  var ROOT = '/_ah/api';
+  // var ROOT = '/_ah/api';
 
- //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+ var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
