some updates on the website fix #1339 #1340
Former-commit-id: 8b05ee4cf6dbb278e4c4ff1f2931288650688c11 [formerly 8eff420b85ffe94bf06b830ca9363445d28ba395] [formerly 48b96e24eea1fddb0bd2a0c296a6e0a4998f460b [formerly b03bfe481e8a28840ee66968a06f5fb829149501]]
Former-commit-id: 8abc593b7f21c434fcad82aa915b81fcf7307def [formerly 3ba29b940d32e5b7144092fa6d5e1743891e5588]
Former-commit-id: 25d8529de02f1c79d905dc3a49be1ec92ad32015

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -51,9 +51,12 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   <body class="index nav-light">
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
-        <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" href="/welcome/">
-        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" ></a>
+        <span itemscope="" itemtype="http://schema.org/LocalBusiness"><a class=
+        "site-logo site-logo-link" data-g-action="Header" data-g-event="Drive" data-g-label=
+        "Drive logo" href="/welcome/">
+        <div class="site-logo-image icon icon-google-logo">
+          <span itemscope="" itemtype="http://schema.org/LocalBusiness">ioGrow</span>
+        </div></a></span>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
         <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
