--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -160,16 +160,17 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       </div>
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
-          <div class="one-whole" id="pricing" style="text-align:left;">
+          <div class="one-whole" id="pricing" style="text-align:center;">
 
-          <h1 class="section-headline section-headline-large section-headline-gray heading-headline">
+        <h1 class="section-headline section-headline-large section-headline-gray heading-headline">
               $30 per user per month <br>
               Get started with ioGrow <br> it’s free for 30 days <br>
 
             </h1>
           
-            <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
+            <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="margin-top:100px;display: inline-block;">
             Start your free trial</a>
+
           </div>
         </div>
       </section>
