--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -141,6 +141,25 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           </div>
         </div>
       </section>
+      <section class="section-filetypes js-hinted-fullscreen" style="height: 307px;">
+        <div class="content">
+          <div class="column column-left with-example">
+            <img src="http://storage.googleapis.com/iogrow-gs/devices.jpg" width="100%">
+          </div>
+          <div class="column column-right with-copy">
+            <div class="copy text-left">
+              <h2 class="heading-headline">
+                Everything you need in your business, all in one place
+              </h2>
+              <p class="section-body allow-orphan">
+               Whether you’re completing your daily tasks, scheduling your events with your customers or closing a sales opportunity – getting everything related to the job on one page, instantly makes collaboration easier. Attach files, add notes and comments – everything’s updated in real time.
+              </p>
+              <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
+            Start using ioGrow now</a>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section-share js-hinted-fullscreen" style="height: 307px;">
         <div class="content">
           <div class="column column-full-width with-copy">
