--- a/templates/base.html
+++ b/templates/base.html
@@ -475,10 +475,10 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   <script type="text/javascript">
 
 
-  // var ROOT = '/_ah/api';
+  var ROOT = '/_ah/api';
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -589,6 +589,7 @@ var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
   <script src="/static/app/scripts/services/importservices.js" ></script>
   <script src="/static/app/scripts/services/edgeservices.js" ></script>
   <script src="/static/app/scripts/services/reportservices.js" ></script>
+  <script src="/static/app/scripts/services/profileservices.js" ></script>
 
   <!--  /End of ioGrow Services -->
   <script src="/static/app/scripts/app.js" ></script>
