inhance linkedin search and fix is Loadoing in account when adding Tags
Former-commit-id: 8eb1340f69faad6513fa49d5953a9c9f6f0e932e [formerly 65a86447c72f5dbf8ef3d26f09de89e017d5f39c] [formerly 8e5b1920efddcd1db5283e8b87edda4e12804a44 [formerly 4d3fae97f4d571e218f58721be6610c8f3940c7d]]
Former-commit-id: 718e8474f5dbd7725842f24084eb8a6553eefae3 [formerly df899769555ec9f59c4f37f3f4f3e366d579755c]
Former-commit-id: 3395740b23da66b95cfca1a267ec539cc7d2c964

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -334,7 +334,7 @@
                   </div>
               </div>
               <div ng-repeat="pro in profiles" droppable  id="card_<%=$index%>"class="cardElement proElement" ng-drop="dropTag(pro,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;" data-span="1" >
-              <div class="btn-group inCardOptionsBtn">
+              <!-- <div class="btn-group inCardOptionsBtn">
                   <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
                    <i class="fa fa-ellipsis-vertical"></i>
                   </button>
@@ -348,7 +348,7 @@
                          <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
                 <div class="detailsSection">
                   <div class="head">
                     <div class="pic">
@@ -366,7 +366,7 @@
                       </div>
                       <div class="pitch">
                         <span>
-                            <%=fromNow(lead.updated_at)%>
+                            <%=pro.locality%>
                         </span>
                         <span ng-show="lead.status" class="contact-title" >
                           Status:
@@ -384,7 +384,7 @@
                             at
                           </span>
                           <a class="desc" href="/#/search/type:Lead <%=lead.company%>">
-                            #<%=lead.company%>
+                            #<%=pro.industry%>
                           </a>
                         </span>
                       </div>
@@ -533,7 +533,7 @@
               <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                 <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
               </form>
-              <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_keywords"></button>
+              <button ng-click="deleteKeyword(keyword)" class="close_tag close pull-right" ng-show="manage_keywords"></button>
             </div>
           </li>
         </ul>
