--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -158,7 +158,8 @@
                   </td>
                   {% if is_admin %} 
                   <td  style="padding-left: 44px;" >
-                    <input title='{{ _("Select all Users")}}' type="checkbox" ng-checked="user.is_admin" ng-click="setAdmin(user,$index,$event)">
+                    <input title='{{ _("Select all Users")}}' type="checkbox" ng-checked="user.is_admin" ng-click="setAdmin(user,$index,$event)"   ng-hide="user.is_super_admin">
+
                   </td>
                   {% endif %}
                 </tr>                
