Deactivate users if they didn't pay and redirect him to pay ,fix #1354
Former-commit-id: 9343e742634491c95a2682e5708bb9e03340e116 [formerly 529f929df4d58fd7a1b14d2acae3bed05d51e44b] [formerly 489c933496f82fca9b2f1bbc9ec4d296aa95fe28 [formerly d490fd640c71ffe0ef603201d7fc9a2a415bba1d]]
Former-commit-id: 1bbc4ce4279553ac2d40a817fa28873912d77c68 [formerly b3e5a11fd87e879e27f6acb287593ef96717e1ae]
Former-commit-id: e24e1869c0b43ef8c2fe0a51537bf85f8f73db35

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,8 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <!-- END RESPONSIVE MENU TOGGLER -->
         <!-- BEGIN TOP NAVIGATION MENU -->
 
+      <input type="hidden" id="license_is_expired" value="{{license_is_expired}}" />
+
         <ul class="nav navbar-nav pull-right">
 
 
